--- a/metadata.yaml
+++ b/metadata.yaml
@@ -14,4 +14,4 @@ sources:
     url: https://digital.slub-dresden.de/id382288378
     license: public domain
     principal: true
-imslp:
+imslp: Miserere_in_C_minor_(Kolberer,_Cajetan)
